--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -32,7 +32,7 @@
                         <span class="header__quantity">10</span>
                     </a>
                 </li>
-                <li class="menu-icon"><a class="header__user icon " (click)='toggleUser()' routerLink=""
+                <li class="menu-icon"><a class="header__user icon " (click)='toggleUser($event)' routerLink=""
                         routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"></a></li>
             </div>
         </ul>
