--- a/src/app/styles/_variables.scss
+++ b/src/app/styles/_variables.scss
@@ -21,6 +21,8 @@ $color_11: #f2a559;
 $color_12: #d18754;
 $color_13: linear-gradient(90deg, #ff5d7d 0%, #7b61ff 100%);
 $color_14: #bdbdbd;
+$color_15: #4a804a;
+$color_16: #4a7f4a;
 %width {
     width: 2rem;
     height: 3rem;
