--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -144,6 +144,9 @@
         }
     }
 }
+.scroll {
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15);
+}
 @media (max-width: 1400px) {
     .header {
         padding-right: $pt !important;
