--- a/src/styles.scss
+++ b/src/styles.scss
@@ -36,9 +36,9 @@ html,
 body {
     height: 100%;
     width: 100%;
-    font-size: 100%;
-    -ms-text-size-adjust: 100%;
-    -moz-text-size-adjust: 100%;
+    font-size: 10px;
+    -ms-text-size-adjust: 10px;
+    -moz-text-size-adjust: 10px;
 }
 
 input,
