--- a/src/app/Modules/home/slider-logo/slider-logo.component.scss
+++ b/src/app/Modules/home/slider-logo/slider-logo.component.scss
@@ -4,83 +4,94 @@
 .container__head {
     background: url("../../../../assets/img-home/Rectangle\ 1.png") 0 0 no-repeat;
     background-size: 100% 100%;
-    max-width: 95%;
+    width: 90%;
     margin: $pt auto;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
 }
 .container__title {
     margin: 5rem;
     .h1 {
-        @include font(Montserrat, normal, 800, 3rem, 120%, 0em, $color_4);
+        margin-top: 2.8rem;
+        margin-left: 6.5rem;
+        width: 51.3rem;
+        @include font(Montserrat, normal, 800, 4.8rem, 120%, 0em, $color_darkgrey);
     }
     .container__paragraph {
-        @include font(Montserrat, normal, 500, 1.8rem, 150%, 0em, $color_4);
-        padding: 3rem 0;
+        margin-left: 6.5rem;
+        @include font(Montserrat, normal, 500, 2.4rem, 150%, 0em, $color_darkgrey);
+        padding: 2rem 0;
     }
 }
 @media (max-width: 1440px) {
     .container__logo {
-        @include wihi(32rem, 30rem);
+        @include wihi(49.1rem, 40rem);
         padding-right: 0;
         .event {
             @include wihi(100%, 100%);
         }
+    }
+}
+@media (max-width: 1320px) {
+    .container__title {
+        margin-right: 0;
+        margin-left: 0;
     }
 }
 @media (max-width: 1150px) {
     .container__logo {
-        @include wihi(32rem, 30rem);
+        @include wihi(40rem, 40rem);
         padding-right: 0;
         .event {
-            @include wihi(100%, 100%);
+            @include wihi(25rem, 25rem);
+            position: absolute;
+            z-index: 1;
+            top: 17rem;
+            left: 36rem;
         }
     }
     .container__title {
-        margin-left: 5rem;
         width: 20rem;
-    }
-}
-@media (max-width: 920px) {
-    .container__logo {
-        @include wihi(30rem, 30rem);
-    }
-    .container__title {
-        width: 15rem;
-        margin-right: 1rem;
     }
 }
 @media (max-width: 820px) {
     .container__logo {
-        @include wihi(25rem, 30rem);
+        @include wihi(25rem, 40rem);
     }
     .container__title {
-        margin-left: 3rem;
-        width: 15rem;
+        width: 20rem;
     }
 }
 @media (max-width: 710px) {
     .container__head {
         display: block;
-        height: 30rem;
+        height: 40rem;
     }
     .container__logo {
-        position: relative;
-        @include wihi(20rem, 20rem);
-        left: 12rem;
-        bottom: 13rem;
-        z-index: 3;
+        @include wihi(40rem, 40rem);
+        padding-right: 0;
+        .event {
+            @include wihi(25rem, 25rem);
+            position: absolute;
+            z-index: 1;
+            top: 17rem;
+            left: 22rem;
+        }
     }
     .container__title {
-        margin-top: $pb;
-        margin-left: $pt;
-        width: 10rem;
+        margin-top: 1.4rem !important;
+        margin-left: 0;
+        z-index: 2;
+        position: relative;
         .h1 {
-            width: 30rem;
+            margin-top: 1rem !important;
+            margin-left: $pt !important;
+            width: 35rem;
         }
         .container__paragraph {
-            padding: $pb 0;
-            width: 10rem;
+            margin-top: 1rem !important;
+            margin-left: $pt !important;
+            width: 25rem;
         }
     }
 }
@@ -89,43 +100,59 @@
         width: 18rem;
         left: 10rem;
         margin-right: 0 !important;
-    }
-    .container__title {
-        .h1 {
-            width: 25rem;
-        }
-        .container__paragraph {
-            width: 8rem;
+
+        .event {
+            @include wihi(20rem, 20rem);
+            position: absolute;
+            z-index: 1;
+            top: 22rem;
+            left: 22rem;
         }
     }
 }
 
 @media (max-width: 500px) {
-    .container__title {
-        .h1 {
-            width: 20rem;
-        }
-    }
     .container__head {
-        width: 30rem;
+        width: 40rem;
     }
     .container__logo {
-        width: 55%;
-        height: 55%;
         left: 11rem;
         margin-right: 0;
         .event {
-            width: 100%;
+            @include wihi(20rem, 20rem);
+            position: absolute;
+            z-index: 1;
+            top: 22rem;
+            left: 21rem;
         }
     }
 }
 @media (max-width: 450px) {
     .container__head {
         margin-top: 10rem;
-        height: 30rem;
+        width: 90%;
+        min-height: 40rem;
     }
     .container__logo {
-        width: 46%;
-        height: 25%;
+        @include wihi(45%, 45%);
+        .event {
+            @include wihi(45%, 45%);
+            position: absolute;
+            z-index: 1;
+            top: 25rem;
+            left: 18rem;
+        }
+    }
+
+    .h1 {
+        font-size: 3.6rem !important;
+        width: 26rem !important;
+        padding-top: 2.4rem !important;
+        padding-left: 0.9rem !important;
+    }
+    .container__paragraph {
+        font-size: 1.6rem !important;
+        width: 15rem !important;
+        padding-left: 0.9rem !important;
     }
 }
