--- a/src/app/Modules/news/news.component.scss
+++ b/src/app/Modules/news/news.component.scss
@@ -3,70 +3,66 @@
 
 .wrapper {
     width: 100%;
-    margin: 0 auto;
+    margin: 1.5rem auto 0 auto;
 }
 .container__line {
-    width: 90%;
-    margin: 0 auto;
-    background: $color_4;
+    width: 78%;
+    margin: 0 20% 2.8rem 12%;
+    background: $color_darkgrey;
     opacity: 0.2;
     height: 1px;
 }
 .container__path {
-    margin: 2rem auto;
+    margin: 1rem 0 3.5rem 12%;
     width: 90%;
 }
 .container__home {
-    margin-right: 2rem;
+    margin-right: 2.8rem;
     a {
-        @include font(Montserrat, normal, normal, 1rem, 150%, 0em, $color_4);
+        @include font(Montserrat, normal, normal, 1.4rem, 150%, 0em, $color_darkgrey);
     }
 }
 .container__angle {
-    margin-right: 2rem;
+    margin-right: 2.4rem;
     margin-top: 0.35rem;
 }
 .container__news {
-    @include font(Montserrat, normal, normal, 1rem, 150%, 0em, $color_14);
+    @include font(Montserrat, normal, normal, 1.4rem, 150%, 0em, $color_lightdarkgrey);
 }
 .container__titl {
-    width: 90%;
-    margin: 0 auto;
-    background: $color_13;
+    width: 78%;
+    margin: 4.5rem 0 2.3rem 12%;
+    background: $color_gradient;
     background-clip: text;
     -webkit-text-fill-color: transparent;
     font-weight: 800;
-    font-size: 3rem;
+    font-size: 4.8rem;
     line-height: 120%;
-    margin-top: 3rem;
-    margin-bottom: 2.5rem;
 }
 .container__text1 {
-    margin-top: 1rem;
-    margin-bottom: 3rem;
-    margin-left: 5%;
-    width: 75%;
-    @include font(Montserrat, normal, normal, 1.6rem, 150%, 0em, $color_black);
+    margin: 1rem 0 7rem 12%;
+    width: 56%;
+    @include font(Montserrat, normal, normal, 1.8rem, 150%, 0em, $color_black);
 }
 .container__text {
     margin-top: 1rem;
     margin-bottom: 3rem;
     width: 100%;
-    @include font(Montserrat, normal, normal, 1.6rem, 150%, 0em, $color_4);
+    @include font(Montserrat, normal, normal, 1.6rem, 150%, 0em, $color_darkgrey);
 }
 
 .container__titles {
     margin: 0.5rem auto 0.5rem;
-    @include font(Montserrat, normal, bold, 2rem, 120%, 0em, $color_4);
+    @include font(Montserrat, normal, bold, 2rem, 120%, 0em, $color_darkgrey);
 }
 .container__date {
     margin-bottom: 1rem;
     width: 75%;
-    @include font(Montserrat, normal, normal, 1.6rem, 150%, 0em, $color_4);
+    @include font(Montserrat, normal, normal, 1.6rem, 150%, 0em, $color_darkgrey);
 }
 .my-pag::ng-deep .ngx-pagination .current {
-    color: $color_4;
-    border: 1px solid $color_3;
+    color: $color_darkgrey;
+    border: 1px solid $color_pink;
     background: $color_white;
 }
 .my-pag::ng-deep .ngx-pagination li {
@@ -84,19 +80,19 @@
     text-align: center;
     letter-spacing: 0.05em;
     text-transform: uppercase;
-    color: $color_4;
+    color: $color_darkgrey;
 }
 .my-pag::ng-deep .ngx-pagination li {
     a {
         border-radius: 10px;
-        border: 1px solid $color_5;
+        border: 1px solid $color_grey;
         width: 3rem;
         height: 3rem;
         background-color: $color_white;
         box-sizing: border-box;
     }
     a:hover {
-        border: 1px solid $color_3;
+        border: 1px solid $color_pink;
         border-radius: 10px;
     }
 }
