--- a/src/app/Modules/news/newsarticle/newsarticle.component.scss
+++ b/src/app/Modules/news/newsarticle/newsarticle.component.scss
@@ -12,7 +12,7 @@
 .container__line {
     width: 90%;
     margin: 0 auto;
-    background: $color_4;
+    background: $color_darkgrey;
     opacity: 0.2;
     height: 1px;
 }
@@ -26,7 +26,7 @@
         font-weight: normal;
         font-size: 1rem;
         line-height: 150%;
-        color: $color_4;
+        color: $color_darkgrey;
     }
 }
 .container__angle {
@@ -37,12 +37,12 @@
     font-weight: normal;
     font-size: 1rem;
     line-height: 150%;
-    color: $color_14;
+    color: $color_lightdarkgrey;
 }
 .container__titl {
     width: 90%;
     margin: 0 auto;
-    background: $color_13;
+    background: $color_gradient;
     background-clip: text;
     -webkit-text-fill-color: transparent;
     font-weight: 800;
@@ -66,7 +66,7 @@
     font-weight: normal;
     font-size: 1.5rem;
     line-height: 170%;
-    color: $color_4;
+    color: $color_darkgrey;
 }
 .container__img1 {
     width: 90%;
