--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -7,8 +7,8 @@
     top: 0;
     z-index: 99;
     background-color: $color_white;
-    padding: $pt 5rem;
-    max-width: 1440px;
+    padding: 3rem 12%;
+    max-width: 100%;
     margin: 0 auto;
     height: 8rem;
 }
@@ -21,116 +21,133 @@
 }
 .header__logo {
     cursor: pointer;
-    height: 4rem;
-    margin-right: 10rem;
+    height: 5rem;
+    margin-right: 24.2rem;
 }
 .first-image {
-    height: 3.5rem;
-    padding-right: 0.8rem;
-    margin-bottom: $pt;
+    width: 3.2rem;
+    height: 3.6rem;
+    margin-right: 0.8rem;
 }
 .second-image {
-    height: 3rem;
-    transform: scale(1.2);
-    padding-top: $pb;
+    height: 3.8rem;
+    padding-top: 0.7rem;
 }
 .header__menu {
     width: 100%;
-    padding-top: $pb;
+    padding-top: 0.5rem;
 }
 .header__icon {
-    width: 25%;
+    width: 100%;
 }
-.header__list li a {
-    @include font(Montserrat, normal, 600, 1.4rem, 150%, 0.05em, $color_4);
+.menu {
+    margin-right: 2rem;
+    padding-top: 0.5rem;
+}
+.menu2,
+.menu4,
+.menu3,
+.menu5 {
+    padding-left: 1.7rem;
+}
+.menu3 {
+    min-width: 11rem;
+}
+.menu-link {
+    @include font(Montserrat, normal, 600, 1.5rem, 110%, 0.05em, $color_darkgrey);
     text-transform: uppercase;
     &.active {
-        color: $color_3;
+        color: $color_pink;
         background: url("../../assets/img-home/Rectangle2.png") center bottom no-repeat;
         background-size: 3.2rem 0.4rem;
-        padding-bottom: $pb;
+        padding-bottom: 2rem;
     }
     &:hover {
-        color: $color_3;
+        color: $color_pink;
         background: url("../../assets/img-home/Rectangle2.png") center bottom no-repeat;
         background-size: 3.2rem 0.4rem;
-        padding-bottom: $pb;
+        padding-bottom: 2rem;
     }
 }
 .header__icon li a {
-    margin-left: 3rem;
+    margin-left: 2.3rem;
     &.active {
-        background: url("../../assets/img-home/search-red.png") 0 0.4rem no-repeat,
-            url("../../assets/img-home/Rectangle2.png") 0 2.3rem no-repeat;
-        padding-bottom: $pb;
+        background: url("../../assets/img-home/search-red.png") 0 0 no-repeat,
+            url("../../assets/img-home/Rectangle2.png") 0 4rem no-repeat;
+        padding-bottom: $pt;
     }
 }
 .header__icon li a.header__search:hover {
-    background: url("../../assets/img-home/search-red.png") 0 0.4rem no-repeat,
-        url("../../assets/img-home/Rectangle2.png") 0 2.3rem no-repeat;
-    padding-bottom: $pb;
+    background: url("../../assets/img-home/search-red.png") 0 0 no-repeat,
+        url("../../assets/img-home/Rectangle2.png") 0 4rem no-repeat;
+    padding-bottom: $pt;
 }
 .header__search {
-    background: url("../../assets/img-home/search.png") 0 0.4rem no-repeat;
+    background: url("../../assets/img-home/search.png") 0 0 no-repeat;
     @extend %width;
 }
 
 .header__bag {
-    background: url("../../assets/img-home/shopping-bag.png") 0 0.4rem no-repeat;
+    background: url("../../assets/img-home/shopping-bag.png") 0 0 no-repeat;
     @extend %width;
 }
 .header__icon li a.header__bag:hover {
-    background: url("../../assets/img-home/shopping-bag-red.png") 0 0.4rem no-repeat,
-        url("../../assets/img-home/Rectangle2.png") 0 2.3rem no-repeat;
+    background: url("../../assets/img-home/shopping-bag-red.png") 0 0 no-repeat,
+        url("../../assets/img-home/Rectangle2.png") 0 4rem no-repeat;
     padding-bottom: $pb;
 }
 .header__quantity {
     display: inline-block;
     color: $color_white;
     position: relative;
-    top: -0.2rem;
-    left: 1rem;
-    width: 1.7rem;
-    height: 1.3rem;
+    top: -1.2rem;
+    left: 1.5rem;
+    width: 2.8rem;
+    height: 2.1rem;
     border-radius: 8px;
-    padding: 6px 5px;
-    line-height: 50%;
+    padding: 2px 5px;
+    @include font(Montserrat, normal, 600, 1.5rem, 110%, 0.05em, $color_white);
     vertical-align: top;
-    font-size: $pb;
-    background-color: $color_3;
+    background-color: $color_pink;
 }
 .header__user {
-    background: url("../../assets/img-home/user.png") 0 0.4rem no-repeat;
+    background: url("../../assets/img-home/user.png") 0 0 no-repeat;
     @extend %width;
 }
 .header__icon li a.header__user:hover {
-    background: url("../../assets/img-home/user-red.png") 0 0.4rem no-repeat,
-        url("../../assets/img-home/Rectangle2.png") 0 2.3rem no-repeat;
+    background: url("../../assets/img-home/user-red.png") 0 0 no-repeat,
+        url("../../assets/img-home/Rectangle2.png") 0 4rem no-repeat;
+    padding-bottom: $pb;
+}
+.header__icon li a.header__user:active {
+    background: url("../../assets/img-home/user-red.png") 0 0 no-repeat,
+        url("../../assets/img-home/Rectangle2.png") 0 4rem no-repeat;
     padding-bottom: $pb;
 }
 .user {
     position: fixed;
-    top: 5rem;
-    right: 3rem;
+    top: 4.7rem;
+    right: 14rem;
     background-color: $color_white;
-    width: 25rem;
-    margin: 2rem;
+    width: 27.3rem;
+    height: 18.1rem;
+    margin: 3.3rem 0 2rem 3rem;
     box-shadow: 0px 10px 25px rgba(0, 0, 0, 0.1);
     .user__li {
-        margin: 2rem 2rem;
+        margin: 2.4rem 2rem;
     }
     .user__text {
-        @include font(Montserrat, normal, 600, 1.5rem, 110%, 0.05em, $color_4);
+        @include font(Montserrat, normal, 600, 1.5rem, 110%, 0.05em, $color_darkgrey);
     }
     .line {
         width: 100%;
         height: 1px;
-        background-color: $color_6;
+        background-color: $color_lightgrey;
     }
     .user__number {
         display: inline-block;
         margin-left: 2rem;
-        background-color: $color_3;
+        background-color: $color_pink;
         width: 2.5rem;
         height: 2.5rem;
         border-radius: 30%;
@@ -157,6 +174,10 @@
         .header__menu {
             width: 100%;
         }
+    }
+    .user {
+        top: 4.7rem;
+        right: 30rem;
     }
 }
 @media (max-width: 1284px) {
@@ -188,31 +209,23 @@
     .header__popup {
         display: block;
         position: fixed;
-        top: 2.5rem;
-        left: 2.5rem;
+        top: 3.5rem;
+        left: 13rem;
         .burger {
             background-color: $color_white;
         }
-        .burger:hover {
-            box-shadow: 2px 2px 3px $color_5;
-        }
         .burger:active {
             position: fixed;
-            top: 2.6rem;
-            left: 2.6rem;
-            box-shadow: 1px 1px 2px $color_5;
+            top: 3.6rem;
+            left: 13.1rem;
         }
         .close {
             background-color: $color_white;
         }
-        .close:hover {
-            box-shadow: 2px 2px 3px $color_5;
-        }
         .close:active {
             position: fixed;
-            top: 2.6rem;
-            left: 2.6rem;
-            box-shadow: 1px 1px 2px $color_5;
+            top: 3.6rem;
+            left: 13.1rem;
         }
     }
     .mobile__menu {
@@ -224,27 +237,33 @@
         text-align: center;
         background: url("../../assets/img-home/Rectangle\ 13.png") 0 0 no-repeat;
         background-size: 100% 100%;
-        padding-top: 5rem;
+        padding-top: 4rem;
         .mobile__li {
             margin-bottom: 4rem;
         }
         .mobile__link {
-            @include font(Montserrat, normal, 600, 1.4rem, 150%, 0.05em, $color_4);
+            @include font(Montserrat, normal, 600, 1.5rem, 110%, 0.05em, $color_darkgrey);
             text-transform: uppercase;
         }
         .mobile__link:hover {
-            color: $color_3;
+            color: $color_pink;
         }
     }
 }
-@media (max-width: 930px) {
-    .header__icon {
-        margin-left: 16rem;
+@media (max-width: 1000px) {
+    .header__popup {
+        left: 12rem;
+        .burger:active {
+            left: 12.1rem;
+        }
+        .close:active {
+            left: 12.1rem;
+        }
     }
 }
 @media (max-width: 886px) {
     .user {
-        right: 1rem;
+        right: 25rem;
     }
     .header__list {
         display: flex;
@@ -260,13 +279,43 @@
     }
     .header__menu {
         display: flex;
-        justify-content: flex-end;
+        justify-content: flex-start;
     }
     .header__logo {
         margin-left: 5rem;
     }
+    .header__popup {
+        top: 2.5rem;
+        left: 7rem;
+        .burger:active {
+            top: 2.6rem;
+            left: 7.1rem;
+        }
+        .close:active {
+            top: 2.6rem;
+            left: 7.1rem;
+        }
+    }
+}
+@media (max-width: 740px) {
+    .header__popup {
+        top: 2.5rem;
+        left: 5rem;
+        .burger:active {
+            top: 2.6rem;
+            left: 5.1rem;
+        }
+        .close:active {
+            top: 2.6rem;
+            left: 5.1rem;
+        }
+    }
 }
 @media (max-width: 564px) {
+    .user {
+        top: 3.7rem;
+        right: 11rem;
+    }
     .header__list li a {
         margin-left: 1.3rem;
     }
@@ -282,27 +331,37 @@
     .header__logo {
         margin-left: 4rem;
     }
+    .header__popup {
+        top: 2.5rem;
+        left: 3rem;
+        .burger:active {
+            top: 2.6rem;
+            left: 3.1rem;
+        }
+        .close:active {
+            top: 2.6rem;
+            left: 3.1rem;
+        }
+    }
 }
 @media (max-width: 500px) {
     .user {
-        right: 1rem !important;
-        margin: 2rem 0;
+        top: 3.7rem;
+        right: 7rem;
     }
     .header__popup {
         top: 2.5rem;
-        left: 0.5rem;
+        left: 1rem;
     }
     .burger:active {
         position: fixed;
         top: 2.6rem;
-        left: 0.5rem !important;
-        box-shadow: 1px 1px 2px $color_5;
+        left: 1.1rem !important;
     }
     .close:active {
         position: fixed;
         top: 2.6rem;
-        left: 0.5rem !important;
-        box-shadow: 1px 1px 2px $color_5;
+        left: 1.1rem !important;
     }
     .header__logo {
         margin-left: $pt;
@@ -316,10 +375,10 @@
         justify-content: center !important;
         margin-left: 0;
         padding: 0;
-        width: 5rem;
+        width: 20rem;
         .menu-icon {
-            margin-right: $pw;
-            width: $pw;
+            margin-right: $pt;
+            width: $pt;
             .icon {
                 margin-left: 0;
                 padding: 0;
@@ -328,53 +387,28 @@
     }
     .header__search,
     .header__bag {
-        width: $pw;
-        transform: scale(1);
-        margin-right: $pb;
+        width: 3rem;
+        margin-right: $pt;
     }
     .header__user {
-        width: $pw;
-        transform: scale(1);
+        width: 3rem;
     }
 }
 @media (max-width: 450px) {
     .header__search,
     .header__bag {
-        width: $pw;
-        transform: scale(1);
         margin-right: $pb;
     }
-    .header__user {
-        width: $pw;
-        transform: scale(1);
-    }
-    .header__icon {
-        display: flex;
-        justify-content: center !important;
-        margin: 0;
-        padding: 0;
-        width: 5rem;
-        .menu-icon {
-            margin-right: $pb;
-            width: $pw;
-            .icon {
-                margin: 0;
-                padding: 0;
-            }
-        }
-    }
     .header__logo {
-        margin-right: $pt;
-        width: 11rem;
-        padding-right: 0;
+        margin-right: 0 !important;
     }
     .header {
         position: fixed;
         z-index: 99;
+        height: 6.4rem;
     }
     .user {
+        top: 3.7rem;
         right: 2rem;
-        width: 20rem;
-        margin: 2rem 0;
     }
 }
