--- a/src/app/styles/_variables.scss
+++ b/src/app/styles/_variables.scss
@@ -7,25 +7,26 @@ $pt: 2rem;
 $pw: 1.5rem;
 $color_white: #fff;
 $color_black: #000;
-$color_1: #ff9eb1;
-$color_2: #d1aee5;
-$color_3: #ff5d7d;
-$color_4: #404040;
-$color_5: #b4b4b4;
-$color_6: #e7e7e7;
-$color_7: #f5f5f5;
-$color_8: #fafafa;
-$color_9: #b4dd7f;
-$color_10: #5e9e5e;
-$color_11: #f2a559;
-$color_12: #d18754;
-$color_13: linear-gradient(90deg, #ff5d7d 0%, #7b61ff 100%);
-$color_14: #bdbdbd;
-$color_15: #4a804a;
-$color_16: #4a7f4a;
+$color_lightpink: #ff9eb1;
+$color_purple: #d1aee5;
+$color_pink: #ff5d7d;
+$color_darkgrey: #404040;
+$color_grey: #b4b4b4;
+$color_lightgrey: #e7e7e7;
+$color_darkwhite: #f5f5f5;
+$color_lightlightgrey: #f6f6f6;
+$color_lightwhite: #fafafa;
+$color_lightgreen: #b4dd7f;
+$color_green: #5e9e5e;
+$color_orange: #f2a559;
+$color_darkorange: #d18754;
+$color_gradient: linear-gradient(90deg, #ff5d7d 0%, #7b61ff 100%);
+$color_gradientblue: linear-gradient(101.17deg, rgba(123, 97, 255, 0.2) 0%, rgba(197, 224, 239, 0.2) 100%), #c5e0ef;
+$color_lightdarkgrey: #bdbdbd;
+$color_darkgreen: #4a804a;
+$color_darklightgreen: #4a7f4a;
 %width {
-    width: 2rem;
-    height: 3rem;
+    width: 4rem;
+    height: 6rem;
     display: inline-block;
-    transform: scale(1.5);
 }
